feat: added auth for all routes
