# cmd/api/routes.go
@@ -2,18 +2,23 @@ package main
 
 import (
 	controller "restapis-go/cmd/api/controllers"
+	"restapis-go/internal/middleware"
 
 	"github.com/gin-gonic/gin"
 )
 
 func setupRoutes(router *gin.Engine) {
 	v1 := router.Group("/api/v1")
-
+	
+	v1.POST("/login", controller.Login)
+	
+	protect := v1.Group("/")
+	protect.Use(middleware.Auth())
 	{
-		v1.GET("/users", controller.ListUsers)
-		v1.GET("/users/:ID", controller.ListUserByID)
-		v1.POST("/users", controller.NewUser)
-		v1.DELETE("/users/delete/:ID", controller.DeleteUser)
-		v1.PATCH("/users/update/:ID/:name", controller.UpdateUser)
+		protect.GET("/", controller.ListUsers)
+		protect.GET("/:ID", controller.ListUserByID)
+		protect.POST("/post", controller.NewUser)
+		protect.DELETE("/delete/:ID", controller.DeleteUser)
+		protect.PATCH("/update/:ID/:name", controller.UpdateUser)
 	}
 }
