# docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/users": {
+        "/": {
             "get": {
                 "description": "Retorna a lista de usuários",
                 "produces": [
@@ -32,7 +32,7 @@
                 }
             }
         },
-        "/users/:ID": {
+        "/:ID": {
             "get": {
                 "description": "Retorna o usuário filtrado por ID",
                 "produces": [
@@ -55,7 +55,7 @@
                 }
             }
         },
-        "/users/delete/:ID": {
+        "/delete/:ID": {
             "delete": {
                 "description": "Remove o usuário com o determinado id no json",
                 "produces": [
@@ -78,7 +78,30 @@
                 }
             }
         },
-        "/users/post/:name": {
+        "/login": {
+            "post": {
+                "description": "Única rota pública para fazer login e receber o token",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "login"
+                ],
+                "summary": "Rota para logar na API",
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/user.User"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/post": {
             "post": {
                 "description": "Adiciona um novo usuário ao json",
                 "produces": [
@@ -101,7 +124,7 @@
                 }
             }
         },
-        "/users/update/:id/:name": {
+        "/update/:id/:name": {
             "patch": {
                 "description": "Muda o nome do usuário definido por url, com id e name",
                 "produces": [
